--- a/src/components/FixBugLink/FixBugLink-styles.css
+++ b/src/components/FixBugLink/FixBugLink-styles.css
@@ -1,5 +1,6 @@
 .bug-report-icon-fixed-div{
-  width: 100vw;
+  width: 100px;
+  margin-left: 35vw;
   max-width: 903px;
   position: fixed;
   display: flex;
@@ -7,7 +8,7 @@
   justify-content: flex-end;
   bottom: 34px;
   height: 35px;
-  z-index: 3;
+  z-index: 2;
 }
 
 .bug-report-icon-container{
@@ -39,6 +40,8 @@
   flex-direction: row;
   position: relative;
   right: 30px;
+  color: #2a2c33;
+  opacity: 1;
 }
 
 img.bug-report-icon-fixed{
